...
                  items: [
                    PopupMenuItem(
                      onTap: (){
                        final logoutStream = widget.userRepository.logout();
                        subscribeToLogoutStream(logoutStream);
                      },
                      child: const Text('Logout'),
                    ),
                  ],
                );
              },
              style: OutlinedButton.styleFrom(
                side: const BorderSide(color: Colors.black),
...
